homelab/kubernetes/istio-egress/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: istio-egress
  labels:
    istio.io/dataplane-mode: ambient
    istio.io/use-waypoint: istio-egress
