homelab/kubernetes/istio-egress/istio-egress.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: istio-egress
  namespace: istio-egress
  # labels:
  #   istio.io/waypoint-for: service
  # annotations:
  #   networking.istio.io/service-type: ClusterIP
spec:
  gatewayClassName: istio-waypoint
  listeners:
    - name: mesh
      port: 15008
      protocol: HBONE
      allowedRoutes:
        namespaces:
          from: Same
